--- a/src/template/template.html
+++ b/src/template/template.html
@@ -26,9 +26,7 @@
           {% for workflow in playlist|last -%}
           <section>
             <h4 id="{{ workflow.id }}">{{ workflow.title }}</h4>
-            <pre>workflow("Workflow #1", function(){
-  assert(1)
-})</pre>
+            <pre><code id="code-{{ workflow.id }}" class="language-javascript">{{ workflow.source }}</code></pre>
           </section>
 
           {% endfor %}
