--- a/src/template/template.html
+++ b/src/template/template.html
@@ -2,7 +2,7 @@
             {% for playlist in playlists %}          
             <ul class="nav list-group" data-spy="affix" data-offset-top="0">
 
-                <li class="nav list-group-item"><a href="#{{ playlist|first.id }}"><b>{{ playlist|first.title }}</b></a></li>
+                <li class="nav list-group-item-heading"><b>{{ playlist|first.title }}</b></li>
                 {% for workflow in playlist|last -%}
                 <li class="nav list-group-item"><a href="#{{ workflow.id }}">{{ workflow.title }}</a></li>
                 {% endfor %}
@@ -12,21 +12,12 @@
             {% endfor -%}            
         </nav>
 
-
         <section id="content" class="col-xs-12 col-sm-8 col-md-8 " data-spy="scroll" data-target="#target_nav" data-offset="20">
-          <section>
-        <hr id="all">
-      </section>
         {% for playlist in playlists %}          
-          <section>
-            <hr id="{{ playlist|first.id }}">
-          </section>
-          <br>
-
           {% for workflow in playlist|last -%}
           <section>
             <h4 id="{{ workflow.id }}">{{ workflow.title }}</h4>
-            <pre><code id="code-{{ workflow.id }}" class="language-javascript">{{ workflow.source }}</code></pre>
+            <pre class="line-numbers"><code id="code-{{ workflow.id }}" class="language-javascript">{{ workflow.source }}</code></pre>
           </section>
 
           {% endfor %}
